api/k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: api
  namespace: alpha
spec:
  selector:
    app: api
  type: NodePort
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
